--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
 </head>
 <body ng-app="BlankApp" ng-cloak>
-  <!--
-    Your HTML content here
-  -->  
+Hello world!
+
+<md-button class="btn1" ng-click="acceptOffer();"> Accept </md-button>
   
   <!-- Angular Material requires Angular.js Libraries -->
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
@@ -17,8 +17,7 @@
 
   <!-- Angular Material Library -->
   <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
-  
-  <!-- Your application bootstrap  -->
+
   <script type="text/javascript">    
     /**
      * You must include the dependency on 'ngMaterial' 
