--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Angular Material style sheet -->
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
 </head>
-<body ng-app="BlankApp" ng-cloak>
+<body ng-app="pewpewpew" ng-cloak>
   <md-toolbar class="md-warn">
     <div class="md-toolbar-tools">
       <h2 class="md-flex">Pew pew pew!!</h2>
@@ -37,7 +37,7 @@ Alright.... There should be some info under here for servers and things.
     /**
      * You must include the dependency on 'ngMaterial'
      */
-    angular.module('BlankApp', ['ngMaterial']);
+    angular.module('pewpewpew', ['ngMaterial']);
   </script>
 
 </body>
