--- a/index.html
+++ b/index.html
@@ -5,40 +5,6 @@
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
 </head>
 <body ng-app="pewpewpew" ng-cloak>
-  <md-toolbar class="md-warn">
-    <div class="md-toolbar-tools">
-      <h2 class="md-flex">Pew pew pew!!</h2>
-    </div>
-  </md-toolbar>
-<md-content flex layout-padding>
-  <p>
-Alright.... There should be some info under here for servers and things.
-  </p>
-
-  <p>
-<iframe src="https://discordapp.com/widget?id=125271371260493824&theme=dark"
- width="500" height="900" allowtransparency="true" frameborder="0"></iframe>
-  </p>
-  <p>
-<img src="https://multicraft.mcprohosting.com/index.php?r=status/530948.png">
-  </p>
-
-</md-content>
-  <!-- Angular Material requires Angular.js Libraries -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
-
-  <!-- Angular Material Library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
-
-  <script type="text/javascript">
-    /**
-     * You must include the dependency on 'ngMaterial'
-     */
-    angular.module('pewpewpew', ['ngMaterial']);
-  </script>
-
+Working on it...
 </body>
 </html>
