--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
 </head>
 <body ng-app="pewpewpew" ng-cloak>
-Working on it...
+There will be a site here soon :)
 </body>
 </html>
