--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
    look around, watch our videos,
    rifle through our photo albums, read our diaries,
    get real invasive here, it's cool. Enjoy and have fun.
+   </br>
+   Love
 </br>
  ᶜᴬSsiᵈʸ ᶜᶫᵘᵇ
  </p>
