added scss and parcelify

--- a/index.html
+++ b/index.html
@@ -1,25 +1,18 @@
 <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Angular Material style sheet -->
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="style.css">
+<head>
+    <link rel="stylesheet" href="bundle.css" type="text/css">
+    <script src="bundle.js" async></script>
+</head>
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
-        <script src="bundle.js"></script>
-    </head>
-    <body >
-        <h1>Cassidy Club</h1>
-        <p>
-            Welcome, internet adventurer, to the digi-home of Cassidy Club. Come on in, look around, watch our videos, rifle through our photo albums, read our diaries, get real invasive here, it's cool. Enjoy and have fun.
+<body>
+    <h1>Cassidy Club</h1>
+    <p>
+        Welcome, internet adventurer, to the digi-home of Cassidy Club. Come on in, look around, watch our videos, rifle through our photo albums, read our diaries, get real invasive here, it's cool. Enjoy and have fun.
         </br>
         ᶜᴬSsiᵈʸ ᶜᶫᵘᵇ
     </p>
+
 </body>
+
 </html>
