and adding back the css reference I accidently removed...

--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
-<html lang="en" >
+<html lang="en">
+
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
 
 </head>
-<body >
-  <h1>Cassidy Club</h1>
-<p> Welcome, internet adventurer, to the digi-home of Cassidy Club. Come on in,
-   look around, watch our videos,
-   rifle through our photo albums, read our diaries,
-   get real invasive here, it's cool. Enjoy and have fun.
-   </br>
-   Love
-</br>
- ᶜᴬSsiᵈʸ ᶜᶫᵘᵇ
- </p>
+
+<body>
+    <h1>Cassidy Club</h1>
+    <p> Welcome, internet adventurer, to the digi-home of Cassidy Club. Come on in, look around, watch our videos, rifle through
+        our photo albums, read our diaries, get real invasive here, it's cool. Enjoy and have fun.
+        </br>
+        Love
+        </br>
+        ᶜᴬSsiᵈʸ ᶜᶫᵘᵇ
+    </p>
 </body>
+
 </html>
