changing background and making the band name bigger

--- a/index.html
+++ b/index.html
@@ -6,18 +6,33 @@
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
+    
 
 </head>
 
 <body>
-    <h1>Cassidy Club</h1>
-    <p> Welcome, internet adventurer, to the digi-home of Cassidy Club. Come on in, look around, watch our videos, rifle through
-        our photo albums, read our diaries, get real invasive here, it's cool. Enjoy and have fun.
-        </br>
-        Love
-        </br>
-        ᶜᴬSsiᵈʸ ᶜᶫᵘᵇ
-    </p>
+
+  
+            <h1>Cassidy CluB</h1>
+
+<div>
+
+
+
+
+</div>
+
+
+
+
+  
+
+
+
 </body>
 
 </html>
