- adds top banner image - adds menu items (just text. not urls)
*bugs....
- Menu text is unreadble when you shrink horizontal resultion
- Menu text switches to veritcle list eventually, but floats right, should float center

--- a/index.html
+++ b/index.html
@@ -1,37 +1,30 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
-
-    
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="container">
 
-  
-            <h1>Cassidy CluB</h1>
+        <h1>Cassidy CluB</h1>
 
-<div>
+        <div class="row">
+            <img class="banner" src="https://res.cloudinary.com/deczhdsjc/image/upload/v1494277336/ZNX3bpa_1_ahloae.png">
+        </div>
 
+        <div class="row menu">
+            <div class="two columns"></div>
+            <div class="two columns">HOME</div>
+            <div class="two columns">MUSIC</div>
+            <div class="two columns">VIDEOS</div>
+            <div class="two columns">ContacT</div>
+            <div class="two columns">EXTRAS</div>
+        </div>
 
-
-
-</div>
-
-
-
-
-  
-
-
+    </div>
 
 </body>
 
