home text and menu styling
add the blurb to the home page and made a little on-hover animation for the menu

--- a/index.html
+++ b/index.html
@@ -17,12 +17,43 @@
 
         <div class="row menu">
             <div class="two columns"></div>
-            <div class="two columns">HOME</div>
-            <div class="two columns">MUSIC</div>
-            <div class="two columns">VIDEOS</div>
-            <div class="two columns">ContacT</div>
-            <div class="two columns">EXTRAS</div>
+            <div class="two columns"> <a href="#home"> HOME </a> </div>
+            <div class="two columns"> <a href="#music"> MUSIC </a> </div>
+            <div class="two columns"> <a href="#videos">VIDEOS </a></div>
+            <div class="two columns"> <a href="#contact"> ContacT </a></div>
+            <div class="two columns"> <a href="#extras"> EXTRAS </a></div>
         </div>
+
+        <!--Home Page-->
+        <div class="row">
+            <div class="eight columns">
+                <h2 id="home">Home</h2>
+                <div>Do you worry about what's happened to music? </div>
+                <div>Do the songs on the radio say nothing to you about your life? </div>
+                <div> Do you find you wake screaming at night, because you don't know what happened to rock and roll?</div>
+
+                <p> If some or none of these apply to you, you're in luck. </p>
+
+                <p> We have the songs you've been looking for. </p>
+
+                <p>Passion.</p>
+
+                <p> Philosophy.</p>
+
+                <p> Guitars. </p>
+
+                <p> These are just some of the words we have in our collective vocabulary. You won't find anyone rhyming stitches with kisses here.</p>
+
+                <p> We are Cassidy Club, a rock band, and this is our homepage sweet homepage. Cassidy Club know that songs, like life, can be fun, funny, and still important. We take songs seriously, not ourselves. Demand more from your bands, and we'll
+                    provide it, right here. Welcome.</p>
+            </div>
+            <div class="four columns">
+                <p> Link to facebook.... </p>
+                <p> Link to bandcamp....</p>
+
+            </div>
+        </div>
+        <!--End Home Page-->
 
     </div>
 
