added music section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,23 @@
         </div>
         <!--End Home Page-->
 
+        <!--Music Page-->
+        <div class="row">
+            <div class="eight columns">
+                <h2 id="music">Music</h2>
+                <div>What do we sound like? This:</div>
+                <p>Link to bandcamp</p>
+
+                <p>Buy our new / first single Friendzone here. Be a patron of the arts and get yourself a fun track in a morally upstanding way.</p>
+
+            </div>
+
+            <div class="four columns">
+
+            </div>
+        </div>
+        <!--End Music Page-->
+
     </div>
 
 </body>
