Added video section and new banner image
Video section has embededededed youtube links. This should be changed to somethng that can lazy load.
It adds like 3 seconds to the page load otherwise.

All generated a reduced quality banner image. The original was 2.2mb and could crawl on a mobile network.
It's still 600kb ish.. So I'll genereate some lower res ones as well.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Cassidy CluB</h1>
 
         <div class="row">
-            <img class="banner" src="https://res.cloudinary.com/deczhdsjc/image/upload/v1494277336/ZNX3bpa_1_ahloae.png">
+            <img class="banner" src="https://res.cloudinary.com/deczhdsjc/image/upload/q_auto:eco/v1494277336/ZNX3bpa_1_ahloae.png">
         </div>
 
         <div class="row menu">
@@ -24,7 +24,7 @@
             <div class="two columns"> <a href="#extras"> EXTRAS </a></div>
         </div>
 
-        <!--Home Page-->
+        <!--Home Section-->
         <div class="row">
             <div class="eight columns">
                 <h2 id="home">Home</h2>
@@ -53,9 +53,9 @@
 
             </div>
         </div>
-        <!--End Home Page-->
+        <!--End Home Section-->
 
-        <!--Music Page-->
+        <!--Music Section-->
         <div class="row">
             <div class="eight columns">
                 <h2 id="music">Music</h2>
@@ -70,7 +70,28 @@
 
             </div>
         </div>
-        <!--End Music Page-->
+        <!--End Music Section-->
+
+        <!--Video Section-->
+        <div class="row">
+            <div class="eight columns">
+                <h2 id="videos">Videos</h2>
+                <div>You're welcome to hang out in our digital video library. Rifle freely through our video content, and be amused.</div>
+
+                <p><iframe width="560" height="315" src="https://www.youtube.com/embed/uEf1c3ig0cw" frameborder="0" allowfullscreen></iframe></p>
+
+                <p><iframe width="560" height="315" src="https://www.youtube.com/embed/1D4SqJwSsLs" frameborder="0" allowfullscreen></iframe></p>
+
+                <p> <iframe width="560" height="315" src="https://www.youtube.com/embed/PqOsxRJ_4fI" frameborder="0" allowfullscreen></iframe></p>
+
+
+            </div>
+
+            <div class="four columns">
+
+            </div>
+        </div>
+        <!--End Video Section-->
 
     </div>
 
