Added facebook and bandcamp logo + nice youtube
Added facebook and bandcamp logos.

Addded nicer youtube player that does a preload of the image rather than loading the entire youtube player.
Linked to the tutorial in the youtubeLazyLoader file!

--- a/index.html
+++ b/index.html
@@ -48,8 +48,19 @@
                     provide it, right here. Welcome.</p>
             </div>
             <div class="four columns">
-                <p> Link to facebook.... </p>
-                <p> Link to bandcamp....</p>
+                <p></p>
+                <p>
+                    <a href="https://www.facebook.com/cassidyclub/" target="_blank">
+                        <img src="https://res.cloudinary.com/deczhdsjc/image/upload/v1495884197/FB-FindUsonFacebook-online-512_ojr1vx.png" alt="Find us on facebook" width="200">
+                    </a>
+                </p>
+
+
+                <p>
+                    <a href="https://cassidyclub.bandcamp.com/" target="_blank">
+                        <img src="https://res.cloudinary.com/deczhdsjc/image/upload/v1495884605/bandcamp-logotype-color-128_lpemci.png" alt="Find us on bandcamp" width="200">
+                    </a>
+                </p>
 
             </div>
         </div>
@@ -60,9 +71,13 @@
             <div class="eight columns">
                 <h2 id="music">Music</h2>
                 <div>What do we sound like? This:</div>
-                <p>Link to bandcamp</p>
 
-                <p>Buy our new / first single Friendzone here. Be a patron of the arts and get yourself a fun track in a morally upstanding way.</p>
+                <p>
+                    <a href="https://cassidyclub.bandcamp.com/" target="_blank">
+                        <img src="https://res.cloudinary.com/deczhdsjc/image/upload/v1495884605/bandcamp-logotype-color-128_lpemci.png" alt="Find us on bandcamp" width="200">
+                    </a>
+
+                    <p>Buy our new / first single Friendzone here. Be a patron of the arts and get yourself a fun track in a morally upstanding way.</p>
 
             </div>
 
@@ -74,16 +89,34 @@
 
         <!--Video Section-->
         <div class="row">
-            <div class="eight columns">
+            <div class="tweleve columns">
                 <h2 id="videos">Videos</h2>
                 <div>You're welcome to hang out in our digital video library. Rifle freely through our video content, and be amused.</div>
 
-                <p><iframe width="560" height="315" src="https://www.youtube.com/embed/uEf1c3ig0cw" frameborder="0" allowfullscreen></iframe></p>
+                <!--bills bills bills-->
 
-                <p><iframe width="560" height="315" src="https://www.youtube.com/embed/1D4SqJwSsLs" frameborder="0" allowfullscreen></iframe></p>
+                <div class="wrapper">
+                    <h4>Bills Bills Bills</h4>
+                    <div class="youtube" data-embed="uEf1c3ig0cw">
+                        <div class="play-button"></div>
+                    </div>
+                </div>
 
-                <p> <iframe width="560" height="315" src="https://www.youtube.com/embed/PqOsxRJ_4fI" frameborder="0" allowfullscreen></iframe></p>
+                <!--busker-->
+                <div class="wrapper">
+                    <h4>Busker Abu</h4>
+                    <div class="youtube" data-embed="1D4SqJwSsLs">
+                        <div class="play-button"></div>
+                    </div>
+                </div>
 
+                <!--devil woman-->
+                <div class="wrapper">
+                    <h4>A message to you Síle Seoige</h4>
+                    <div class="youtube" data-embed="PqOsxRJ_4fI">
+                        <div class="play-button"></div>
+                    </div>
+                </div>
 
             </div>
 
@@ -96,5 +129,6 @@
     </div>
 
 </body>
+<script type="text/javascript" src="youtubeLazyLoader.js" defer></script>
 
 </html>
