added font awesome

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
@@ -90,7 +91,8 @@
         <!--Video Section-->
         <div class="row">
             <div class="tweleve columns">
-                <h2 id="videos">Videos</h2>
+                <h2 id="videos">Videos
+                </h2>
                 <div>You're welcome to hang out in our digital video library. Rifle freely through our video content, and be amused.</div>
 
                 <!--bills bills bills-->
