Add friendzone video and spiel

--- a/index.html
+++ b/index.html
@@ -28,7 +28,22 @@
         <!--Home Section-->
         <div class="row">
             <div class="eight columns">
-                <h2 id="home">Home</h2>
+                <h2 class="single">Friendzone</h2>
+
+                <p>Ladies and gentlemen, I am proud to present Cassidy Club's first official music video, Friendzone.</p>
+               <p> Buy the (uncensored) track <a href="goo.gl/rJpgrx">here</a>  or come to this launch gig next week and get it in your lucky pack on the <a href="goo.gl/5BE3xW">door</a>.<p/>
+            Enjoy!
+            </br>
+               love,
+               </br>
+               CᴬSsiᵈʸ CᶫUB
+                <div class="wrapper">
+                    <div class="youtube" data-embed="el6CEy_n2og">
+                        <div class="play-button"></div>
+                    </div>
+                </div>
+
+            <h2 id="home">Home</h2>
                 <div>Do you worry about what's happened to music? </div>
                 <div>Do the songs on the radio say nothing to you about your life? </div>
                 <div> Do you find you wake screaming at night, because you don't know what happened to rock and roll?</div>
